# cqotl

./: .lia.cache  README.md  example_coq (1).hs
.github/workflows/: lean.yml
coq_formal/: .gitignore  _CoqProject  quantum.v
coq_formal/.github/workflows/: coq-action.yml
draft/: .gitignore  01Introduction.tex  03MotivatingExamples.tex  04CoreLanguage.tex  05Prover.tex  07Implementation.tex  08CaseStudy.tex  appendix.tex  cqotl.tex  main.tex  ref.bib
generator/: .gitignore  README.txt  cqotl_path.config  dune-project  generator.opam  source
generator/examples/: demo  example1  example2  lean-example1  lean-example3  simple.cqw  source copy  source copy 2
generator/examples/case-studies/: example1-1  example1-2  example1-3  example2  example3  example4
generator/examples/lean-examples/: lean-example1  lean-example2  lean-example3  lean-example4
generator/lib/: ast.ml  ast_transform.ml  dune  kernel.ml  lean_generator.ml  lexer.mll  obligations.ml  parser.mly  parser_utils.ml  pretty_printer.ml  prover.ml  reasoning.ml  transformer.ml  typing.ml  utils.ml
generator/lib/coqQ_codegen/: coqQ_ast.ml
generator/lib/lean_codegen/: examples.ml  lean_ast.ml  lean_commons.ml  lean_examples.ml  lean_generator.ml  lean_printer.ml  mapper.ml  quantum_ast.ml
generator/test/: dune
lean-veri/: .gitignore  LeanVeri.lean
lean-veri/LeanVeri/: BasicPreliminares.lean  Commons.lean  InfValPred.lean  LinearMapPropositions.lean  LinearMapSupp.lean  Obligation1.lean  Obligations.lean  OuterProduct.lean  ProjectionSubmodule.lean  Proof.lean  Properties.lean  mwe.lean
lean-veri/LeanVeri/Examples/: obligation_10.lean  obligation_11.lean  obligation_4.lean  obligation_5.lean  obligation_6.lean  obligation_7.lean  obligation_8.lean  obligation_9.lean
lean-veri/LeanVeri/Proofs/Example1/: obligation_1.lean  obligation_11.lean  obligation_2.lean  obligation_3.lean
lib/: ast.ml  dune  pretty_printer.ml
