(menhir
 (modules parser)
; --trace outputs the parsing trace, can be used for debugging purposes
 (flags --table)
)

(ocamllex lexer)

(include_subdirs unqualified)

(library
 (name cqotl_vgc)
 (modules
  utils
  ast                  
  pretty_printer       
  parser               
  lexer
  parser_utils
  ast_transform
  typing
  reasoning
  prover
  examples
  lean_ast
  lean_generator
  lean_printer
  mapper)
 (libraries menhirLib) 
)
; Disable warnings for unused variables
(env
  (dev
    (flags (:standard -warn-error -27))))