(menhir
 (modules parser)
; --trace outputs the parsing trace, can be used for debugging purposes
 (flags --table)
)

(ocamllex lexer)

(include_subdirs unqualified)

(library
 (name cqotl_vgc)
 (modules
  utils
  ast                  
  pretty_printer       
  parser               
  lexer
  parser_utils
  ast_transform
  typing
  reasoning
  prover
  lean_examples
  lean_ast
  lean_generator
  lean_printer
  lean_commons
  transformer
  quantum_ast
  obligations
  coqQ_ast
  mapper)
 (libraries menhirLib)
 
 (preprocess (pps ppx_deriving.std ppx_deriving.show))
)
; Disable warnings for unused variables
(env
  (dev
    (flags (:standard -warn-error -27))))